--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i);
 
 
 
@@ -20,35 +20,35 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 3rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 4.8rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 1.6rem;
 }
 .display-5 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1.5rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
@@ -658,7 +658,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
@@ -4745,6 +4745,51 @@ body {
 .cid-rvaxQiu2Ow {
   background-image: url("../../../assets/images/background4.jpg");
 }
+.cid-rymcq2Io7l {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-rymcq2Io7l .image-block {
+  margin: auto;
+}
+.cid-rymcq2Io7l .mbr-figure {
+  margin: 0 auto;
+}
+.cid-rymcq2Io7l figcaption {
+  position: relative;
+}
+.cid-rymcq2Io7l figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rymcq2Io7l .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rymd7yrtLR {
+  background: #c1c1c1;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-rymd7yrtLR .image-block {
+  margin: auto;
+}
+.cid-rymd7yrtLR figcaption {
+  position: relative;
+}
+.cid-rymd7yrtLR figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rymd7yrtLR .image-block {
+    width: 100% !important;
+  }
+}
 .cid-rvay5Ov2d2 {
   background: #000000;
   padding-top: 60px;
@@ -4763,27 +4808,6 @@ body {
 }
 @media (max-width: 768px) {
   .cid-rvay5Ov2d2 .image-block {
-    width: 100% !important;
-  }
-}
-.cid-rvay5wpIy0 {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.cid-rvay5wpIy0 .image-block {
-  margin: auto;
-}
-.cid-rvay5wpIy0 figcaption {
-  position: relative;
-}
-.cid-rvay5wpIy0 figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rvay5wpIy0 .image-block {
     width: 100% !important;
   }
 }
@@ -5277,6 +5301,91 @@ body {
 .cid-rxwGWYERbS .media-container-row {
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse;
+}
+.cid-rymeXFvSfj {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rymeXFvSfj .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rymeXFvSfj .mbr-content-text {
+  color: #767676;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rymeXFvSfj .card {
+  word-wrap: break-word;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-rymeXFvSfj .img-text {
+  width: 64px;
+  height: 64px;
+  font-size: 32px;
+  border: 2px solid #efefef;
+  border-radius: 50%;
+}
+@media (max-width: 991px) {
+  .cid-rymeXFvSfj .img-text {
+    width: 48px;
+    height: 48px;
+    font-size: 24px;
+  }
+}
+@media (min-width: 992px) {
+  .cid-rymeXFvSfj .cards-block {
+    border-top: 2px solid #efefef;
+  }
+}
+.cid-rymeXFvSfj .cards-block .card {
+  border-bottom: 2px solid #efefef;
+  border-radius: 0;
+}
+.cid-rymeXFvSfj .cards-container {
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  word-break: break-word;
+}
+@media (max-width: 767px) {
+  .cid-rymeXFvSfj .panel-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cid-rymeXFvSfj .panel-item .card-img {
+    padding: 0;
+    padding-bottom: 1rem;
+  }
+}
+.cid-rymgWGWfFX {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rymgWGWfFX .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rymgWGWfFX .section-text {
+  padding: 2rem 0;
+}
+.cid-rymgWGWfFX .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rymgWGWfFX .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-rxwOQKVFlY {
   padding-top: 60px;
